--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>cicd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>cicd</name>
+	<name>cicdd</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
